--- a/views/home.ejs
+++ b/views/home.ejs
@@ -155,7 +155,7 @@
 <body>
     <h1>Url Shortner</h1>
     <div id="f1">
-        <form method="post" action="/short">
+        <form method="post" action="/">
             <label><input type="text" id="textfield" name="url" placeholder="https//google.com"></label>
             <label id="labbtn"><input type="submit" id="btn" value="Generate"></label>
         </form>
